# velora

./: .flake8  .gitignore  404.html  CNAME  README.md  cliff.toml  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  tox.ini
.github/workflows/: codecov.yml  docs.yml  publish.yml
changelog/v0.0.1/: index.html
changelog/v0.0.2/: index.html
changelog/v0.0.3/: index.html
changelog/v0.1.1/: index.html
changelog/v0.2.0/: index.html
docker/: docs.Dockerfile  testdeps.Dockerfile
docs/: help.md  index.md
docs/changelog/: v0.0.1.md  v0.0.2.md  v0.0.3.md  v0.1.0.md  v0.1.1.md  v0.2.0.md
docs/starting/: history.md  homage.md  index.md  license.md  roadmap.md
examples/: cartpole.ipynb  controller.ipynb  cross-entropy.ipynb  cross_entropy.py  sarsa.ipynb  tabular-learning.ipynb
examples/config/: cartpole.yaml  cp_ce.yaml  cp_fl.yaml  sarsa.yaml  tl_fl.yaml
help/: index.html
learn/customize/: index.html
learn/reference/: index.html
learn/theory/: index.html
learn/tutorial/: index.html
search/: search_index.json
starting/: index.html
starting/history/: index.html
starting/homage/: index.html
tests/: conftest.py  demo.yaml  test_analytics.py  test_buffer.py  test_callbacks.py  test_config.py  test_controller.py  test_core.py  test_display.py  test_enums.py  test_gym.py  test_history.py  test_metrics.py  test_noise.py  test_policy.py  test_restore.py  test_state.py  test_storage.py  test_training.py  test_utils.py  test_value.py
velora/: __init__.py  agent.py  buffer.py  callbacks.py  config.py  controller.py  exc.py  gym.py  history.py  metrics.py  noise.py  state.py  utils.py  wiring.py
(+182 files in other folders)
